# 2nd-Week

./: .gitignore
feeding_voice/: package.xml  setup.cfg  setup.py
feeding_voice/object_detection/: detection.py  yolo.py
feeding_voice/resource/: .env  T_gripper2camera.npy  class_name.json  food.json  lips.json  pokemon.json  pororo.json  rice.json
feeding_voice/robot_control/: robot_control.py
feeding_voice/voice_processing/: get_keyword.py  stt.py  tts.py  wakeup_word.py
hh_od_msg/: CMakeLists.txt  package.xml
hh_od_msg/action/: ActionLipsDepthPosition.action  TrackLips.action
hh_od_msg/msg/: MsgLipsDepthPosition.msg
hh_od_msg/srv/: SrvCheckStop.srv  SrvRiceRichPosition.srv  SrvRobotPos.srv  SrvStartToTrack.srv
